[gd_scene format=3 uid="uid://k8xh53yapv5h"]

[ext_resource type="StyleBox" uid="uid://d1rhal5rp1608" path="res://assets/styles/panel/MetalBox.tres" id="1_73cy2"]
[ext_resource type="Script" uid="uid://nstfcyh0yvl8" path="res://entities/ui/custom_deck_edit_card/scripts/CustomDeckEditCard.gd" id="2_e58mf"]
[ext_resource type="Resource" uid="uid://dypotev1f5d8k" path="res://shared/resources/translations/assets/NewCardName.tres" id="3_0kef1"]
[ext_resource type="Script" uid="uid://chfatpxf8ucxr" path="res://shared/entities/clickable_button/ClickableButton.gd" id="3_cv4bc"]
[ext_resource type="Script" uid="uid://bnsnhypypbo4c" path="res://shared/entities/custom_deck/scripts/CustomDeckLoadImage.gd" id="3_lidqe"]
[ext_resource type="Script" uid="uid://bvp2maxoi8yco" path="res://shared/entities/custom_deck/scripts/CustomDeckNameText.gd" id="3_moxuo"]
[ext_resource type="Resource" uid="uid://dmwkoj8jjp52q" path="res://shared/resources/translations/assets/NewCardDescription.tres" id="4_3rdw3"]
[ext_resource type="Script" uid="uid://cky8chsg088ia" path="res://shared/entities/custom_deck/scripts/CustomDeckDescriptionText.gd" id="4_dhv4o"]
[ext_resource type="Script" uid="uid://d0jijr8wa6o8v" path="res://shared/entities/clickable_button/resources/behaviors/DefaultButtonBehavior.gd" id="9_jkgfh"]

[sub_resource type="Resource" id="Resource_ga01i"]
script = ExtResource("9_jkgfh")
metadata/_custom_type_script = "uid://d0jijr8wa6o8v"

[sub_resource type="Resource" id="Resource_0kef1"]
script = ExtResource("9_jkgfh")
metadata/_custom_type_script = "uid://d0jijr8wa6o8v"

[sub_resource type="Resource" id="Resource_3rdw3"]
script = ExtResource("9_jkgfh")
metadata/_custom_type_script = "uid://d0jijr8wa6o8v"

[node name="EditCard" type="PanelContainer" unique_id=114676978]
custom_minimum_size = Vector2(1000, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_73cy2")
script = ExtResource("2_e58mf")
initial_card_name = ExtResource("3_0kef1")
initial_card_description = ExtResource("4_3rdw3")

[node name="FileDialog" type="FileDialog" parent="." unique_id=120820904]
oversampling_override = 1.0
title = "Open a File"
size = Vector2i(764, 360)
file_mode = 0
display_mode = 1
access = 2
filters = PackedStringArray("*.png", "*.jpg")
use_native_dialog = true

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1103292871]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=1919982817]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer" unique_id=1138252543]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardName" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer" unique_id=1211846507]
layout_mode = 2
tooltip_text = "CARD_NAME_DESCRIPTION"
mouse_filter = 1
text = "CARD_NAME"

[node name="NameInput" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer" unique_id=1579399260]
layout_mode = 2
script = ExtResource("3_moxuo")

[node name="CardDescription" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer" unique_id=2074452447]
layout_mode = 2
tooltip_text = "CARD_DESCRIPTION_DESCRIPTION"
mouse_filter = 1
text = "CARD_DESCRIPTION"

[node name="CardDescriptionInput" type="TextEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer" unique_id=868889855]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_dhv4o")

[node name="Image" type="VBoxContainer" parent="VBoxContainer/HBoxContainer" unique_id=1420202392]
layout_mode = 2
size_flags_vertical = 0

[node name="CardImage" type="TextureRect" parent="VBoxContainer/HBoxContainer/Image" unique_id=1901833897]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
script = ExtResource("3_lidqe")

[node name="LoadCard" type="Button" parent="VBoxContainer/HBoxContainer/Image" unique_id=319160580]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "LOAD_IMAGE_DESCRIPTION"
text = "LOAD_IMAGE"
script = ExtResource("3_cv4bc")
button_behavior = SubResource("Resource_ga01i")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer" unique_id=1409923387]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Save" type="Button" parent="VBoxContainer/HBoxContainer2" unique_id=470189851]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "SAVE_CARD_DESCRIPTION"
text = "SAVE_CARD"
script = ExtResource("3_cv4bc")
button_behavior = SubResource("Resource_0kef1")

[node name="Abort" type="Button" parent="VBoxContainer/HBoxContainer2" unique_id=1694274247]
layout_mode = 2
tooltip_text = "ABORT_DESCRIPTION"
text = "ABORT"
script = ExtResource("3_cv4bc")
button_behavior = SubResource("Resource_3rdw3")

[connection signal="card_updated" from="." to="VBoxContainer/HBoxContainer/VBoxContainer/NameInput" method="deck_updated"]
[connection signal="card_updated" from="." to="VBoxContainer/HBoxContainer/VBoxContainer/CardDescriptionInput" method="deck_updated"]
[connection signal="card_updated" from="." to="VBoxContainer/HBoxContainer/Image/CardImage" method="deck_updated"]
[connection signal="file_selected" from="FileDialog" to="." method="update_card_image"]
[connection signal="file_selected" from="FileDialog" to="VBoxContainer/HBoxContainer/Image/CardImage" method="new_image_selected"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/NameInput" to="." method="update_card_name"]
[connection signal="text_is_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/CardDescriptionInput" to="." method="update_card_description"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Image/LoadCard" to="FileDialog" method="show"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Save" to="." method="save_card"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Abort" to="." method="cancel"]
